# beacn-link-linux

./: .gitignore  DEBUG_LOG.md  README.md  beacn_native.cc  binding.gyp  cli.js  index.js  package-lock.json  package.json  test_controls  test_multi_stream  test_pipewire  test_pipewire.c  test_stream  test_stress
beacn-build/beacn-native/: Cargo.toml
beacn-build/beacn-native/.cargo/: config.toml
beacn-build/beacn-native/src/: cleanup.rs
beacn-source/: .data  .rdata  .reloc  .rsrc_1  .text  CERTIFICATE
beacn-source/.rsrc/: string.txt  version.txt
beacn-source/.rsrc/DIALOG/: 10123  2000  201  216  225
beacn-source/.rsrc/GROUP_ICON/: 128
beacn-source/.rsrc/HTML/: 10108  10109  10110  10111  10112  10113  10114  10115  10116
beacn-source/.rsrc/ICON/: 1
beacn-source/.rsrc/MANIFEST/: 1
docs/: CHANGELOG.md  LICENSE
lib/: index.js
npm/: package.json
src/: beacn_audio.rs  binding.cc  lib.rs
src/cli/: cli.js
tests/pipewire/: build-test.sh  test_controls.c  test_multi_stream.c  test_stream.c  test_stress.c
